# react-native-handel-native-event

./: .gitignore  CONTRIBUTING.md  HandelNativeEvent.podspec  INSTALL_GUIDE.md  LICENSE  README.md  bunfig.toml  eslint.config.mjs  jest-setup.js  lefthook.yml  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  publish.yml
.omc/: project-memory.json
.omc/plans/: autopilot-impl.md
.omc/sessions/: 65d8d2b3-04d0-4863-a347-5ff17d710086.json
.omc/state/: agent-replay-db1da3f5-79cb-44f0-ac7d-2cab99361ad2.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  performance-boost.cpp
android/src/main/java/com/handelnativeevent/: HandelNativeEventModule.kt  (+1 more)
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/HandelNativeEventExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/HandelNativeEventExample.xcodeproj/: project.pbxproj
example/ios/HandelNativeEventExample.xcodeproj/xcshareddata/xcschemes/: HandelNativeEventExample.xcscheme
example/src/: App.tsx
ios/: HandelNativeEvent.h  HandelNativeEvent.mm
lib/module/: NativeHandelNativeEvent.js  NativeHandelNativeEvent.js.map  index.js  index.js.map
lib/typescript/src/: NativeHandelNativeEvent.d.ts  NativeHandelNativeEvent.d.ts.map  index.d.ts  index.d.ts.map
src/: NativeHandelNativeEvent.ts  index.tsx
src/__tests__/: index.test.tsx
(+3 files in other folders)
